--- a/src/utils/style/css/style.css
+++ b/src/utils/style/css/style.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
+ margin: 0%;
   padding: 0 100px;
   max-width: 1440px;
   font-family: "Monserrat", sans-serif;
@@ -73,7 +73,7 @@
 }
 .banner_text {
   color: white;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 500px;
   position: absolute;
   top: 50%;
@@ -95,12 +95,12 @@
     margin-bottom: 110px;
   }
   .banner_text {
-    font-size: 24px;
+    font-size: 22px;
     top: 75%;
-    left: 108px;
-    text-align: left;
-    width: 193px;
-    text-align: start;
+   
+   
+    width: 350px;
+    text-align: center;
   }
 }
 .home {
@@ -150,7 +150,8 @@
   width: 100%;
   height: 340px;
   border-radius: 15px;
-  width: 100%;
+  width: 92%;
+  margin-left: 4%;
 }
 
 .cards__title {
