--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -10,6 +10,7 @@
   color: white;
   font-size: 48px;
   font-weight: 500px;
+  width: 90%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -36,6 +37,6 @@
     left: 108px;
     text-align: left;
     width: 193px;
-    text-align: start;
+    text-align: center;
   }
 }/*# sourceMappingURL=banner.css.map */
