--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -10,6 +10,7 @@
         color: white;
         font-size: 48px;
         font-weight: 500px;
+        width: 90%;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -39,7 +40,7 @@
             left: 108px;
             text-align: left;
             width: 193px;
-            text-align: start;
+            text-align: center;
         }
     }
     
