--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
+  margin: 0;
   padding: 0 100px;
   max-width: 1440px;
   font-family: "Monserrat", sans-serif;
