--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,7 +3,7 @@
     display: flex;
    justify-content: space-between;
    align-items: center;
-   margin: 0 auto;
+   margin: 0;
     padding: 0 100px;
     max-width: 1440px;
     font-family: 'Monserrat', sans-serif;
@@ -14,7 +14,7 @@
     width: 180px;
 }
 
-// liens 
+
 .link_style{
     color: #FF6060;
    text-decoration: none;
@@ -30,9 +30,6 @@
 // Reponsiv mobile
 
 @media (max-width:767px){
-
-
-
     .header-container{
         display: flex;
        justify-content: space-between;
