--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -8,11 +8,11 @@
 }
 .banner_text {
   color: white;
-  font-size: 48px;
-  font-weight: 500px;
-  width: 90%;
+  font-size: 45px;
+  font-weight: 500;
+  width: 700px;
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -34,9 +34,8 @@
   .banner_text {
     font-size: 24px;
     top: 75%;
-    left: 108px;
     text-align: left;
-    width: 193px;
+    width: 100%;
     text-align: center;
   }
 }/*# sourceMappingURL=banner.css.map */
