--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -1,4 +1,3 @@
-
 .banner{
     width: 100%;
     max-width: 1240px;
@@ -8,16 +7,14 @@
     position: relative;
     &_text{
         color: white;
-        font-size: 48px;
-        font-weight: 500px;
-        width: 90%;
+        font-size: 45px;
+        font-weight: 500;
+        width: 700px;
         position: absolute;
-        top: 50%;
+        top: 30%;
         left: 50%;
         transform: translate(-50%,-50%);
         z-index: 1;
-
-
     }
     &_img{
         width: 100%;
@@ -26,22 +23,18 @@
         object-fit: cover;
         filter: brightness(0.8);
     }
-
 }
 
 @media (max-width:767px){
     .banner{
         height: 111px;
          margin-bottom: 110px;
-        
         &_text {
             font-size: 24px;;
             top: 75%;
-            left: 108px;
             text-align: left;
-            width: 193px;
+            width: 100%;
             text-align: center;
         }
     }
-    
 }
