--- a/src/components/Carrousel/carrousel.css
+++ b/src/components/Carrousel/carrousel.css
@@ -3,14 +3,15 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  margin-top: 50px;
 }
 
 .caroussel__img {
   width: 100%;
+  height: 550px;
   border-radius: 15px;
   -o-object-fit: cover;
      object-fit: cover;
-  height: 415px;
 }
 
 .caroussel__arrowright {
