--- a/src/components/Carrousel/carrousel.scss
+++ b/src/components/Carrousel/carrousel.scss
@@ -4,20 +4,22 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    margin-top: 50px;
  }
+
 .caroussel__img{
     width: 100%;
+    height: 550px;
     border-radius: 15px;
     object-fit: cover;
-    height: 415px;
 }
+
  .caroussel__arrowright{
     cursor: pointer;
     position: absolute;
     left: 2%;
     top: 46%;
     border: none;
-    
 }
 
 .caroussel__arrowleft{
@@ -25,13 +27,11 @@
     position: absolute;
     right: 2%;
     top: 46%;
-   border: none;
+    border: none;
 }
 .caroussel__compt{
     position: absolute;
-
     bottom: 0%;
- 
     color: white;
     font-weight: 700;
  }
@@ -50,7 +50,4 @@
          .caroussel__compt{
             display: none;
          }
-
      }
-
-    
