--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,10 +1,12 @@
 .footer_container {
   background-color: black;
   height: 210px;
+  margin: 50px -13px -8px -13px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
 }
 
 .FooterText {
@@ -19,7 +21,7 @@
   .FooterText {
     font-size: 12px;
     flex-direction: column;
-    width: 133.59px;
+    width: 130px;
     height: 46px;
     text-align: center;
   }
