--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,27 +1,24 @@
 // header
 .header-container{
-    display: flex;
+   display: flex;
    justify-content: space-between;
    align-items: center;
-   margin: 0;
-    padding: 0 100px;
-    max-width: 1440px;
-    font-family: 'Monserrat', sans-serif;
-
+   margin: auto;
+  
+   max-width: 1240px;
+   font-family: 'Monserrat', sans-serif;
 }
 
 .logo_kasa{
-    width: 180px;
+   width: 180px;
 }
 
-
 .link_style{
-    color: #FF6060;
+   color: #FF6060;
    text-decoration: none;
    font-size: 24px;
    padding: 0 0 0 60px;
 }
-
 
 .link_style.active {
     text-decoration: underline;
@@ -31,24 +28,19 @@
 
 @media (max-width:767px){
     .header-container{
-        display: flex;
+       display: flex;
        justify-content: space-between;
        padding: 0px;
-   
     }
     
     .logo_kasa{
         width: 140px;
     }
     
-    // liens 
-    
     .link_style {
         font-size: 17px;
         padding: 0 0 0 20px;
     }
-        
-   
 }
 
 
