--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -5,8 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 100px;
-  margin: 5px auto;
+  margin: auto;
 }
 
 @media (max-width: 768px) {
