--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -5,14 +5,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 100px;
-    margin: 5px auto;
+    margin: auto;
 }
 
 @media  (max-width:768px) {
     .home{
         padding: 0;
     }
- 
-    
 }
