--- a/src/components/Cards/cards.css
+++ b/src/components/Cards/cards.css
@@ -5,40 +5,52 @@
   max-width: 1240px;
   background-color: #F6F6F6;
   border-radius: 25px;
-  gap: 50px;
-  padding-top: 20px;
-  padding-left: 20px;
+  padding-top: 30px;
+  padding-right: 30px;
 }
 
 .cards {
-  width: 340px;
-  margin-bottom: 35px;
+  width: calc(33.33% - 30px);
+  aspect-ratio: 1/1;
+  margin-bottom: 30px;
+  margin-left: 30px;
 }
 
 .cards__cont {
   cursor: pointer;
   width: 100%;
-  height: 340px;
+  height: 100%;
   position: relative;
   gap: 50px;
   margin: 0;
+  overflow: hidden;
 }
 
 .cards__img {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 340px;
+  height: 100%;
   border-radius: 15px;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  width: 92%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  border-radius: 15px;
 }
 
 .cards__title {
   color: white;
   font-size: 18px;
   position: absolute;
-  width: 240px;
+  width: 80%;
   bottom: 15px;
   left: 20px;
   margin: 0;
@@ -46,11 +58,13 @@
 
 @media (max-width: 767px) {
   .cards_home {
-    gap: 20px;
-    margin-bottom: 50px;
+    background-color: white;
+    padding-top: 0px;
+    padding-right: 0px;
   }
   .cards {
-    width: 100%;
-    margin-left: 4%;
+    width: 95%;
+    margin-left: 0;
+    height: 225px;
   }
 }/*# sourceMappingURL=cards.css.map */
