--- a/src/components/Carrousel/carrousel.css
+++ b/src/components/Carrousel/carrousel.css
@@ -38,9 +38,6 @@
 }
 
 @media (max-width: 767px) {
-  .caroussel__img {
-    height: 255px;
-  }
   .caroussel__arrowright {
     width: 7%;
   }
@@ -49,5 +46,8 @@
   }
   .caroussel__compt {
     display: none;
+  }
+  .caroussel_container {
+    margin-bottom: 5px;
   }
 }/*# sourceMappingURL=carrousel.css.map */
