--- a/src/components/Carrousel/carrousel.scss
+++ b/src/components/Carrousel/carrousel.scss
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    margin-top: 50px;
+    margin-top: 25px;
  }
 
 .caroussel__img{
@@ -38,9 +38,7 @@
 
 //  Responsiv mobile
  @media (max-width:767px) {
-    .caroussel__img{
-        height: 255px;
-        }
+   
          .caroussel__arrowright{
             width: 7%;
          }
@@ -50,4 +48,7 @@
          .caroussel__compt{
             display: none;
          }
+.caroussel_container{
+   margin-bottom: 5px;
+}
      }
