--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,6 +3,8 @@
   justify-content: space-between;
   align-items: center;
   margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
   max-width: 1240px;
   font-family: "Monserrat", sans-serif;
 }
@@ -26,7 +28,9 @@
   .header-container {
     display: flex;
     justify-content: space-between;
-    padding: 0px;
+    width: 95%;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
   .logo_kasa {
     width: 140px;
