--- a/src/components/Collapse/collapse.css
+++ b/src/components/Collapse/collapse.css
@@ -1,9 +1,14 @@
 .collapse {
   width: 90%;
-  margin: 5%;
   margin-bottom: 20px;
   border-radius: 5%;
   margin: 0 auto 3% auto;
+}
+@media (max-width: 767px) {
+  .collapse {
+    margin-top: 20px;
+    width: 100%;
+  }
 }
 .collapse__title__img {
   margin: auto;
@@ -15,10 +20,20 @@
   color: white;
   border-radius: 5px;
 }
+@media (max-width: 767px) {
+  .collapse__title__img {
+    margin-bottom: 20px;
+  }
+}
 .collapse__text {
   margin: 0;
   padding: 15px;
-  width: 70%;
+  width: 97%;
+}
+@media (max-width: 767px) {
+  .collapse__text {
+    text-align: left;
+  }
 }
 
 .drop__up {
