--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,22 +1,22 @@
 .footer_container {
   background-color: black;
   height: 210px;
-  margin: 50px -13px -8px -13px;
+  margin: 25px -58px -8px -58px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
 }
 
 .FooterText {
   color: white;
   font-size: 18px;
+  font-weight: 500;
 }
 
 @media (max-width: 767px) {
   .footer_container {
-    margin: -8px;
+    margin: 0px -8px -8px -8px;
   }
   .FooterText {
     font-size: 12px;
