--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -1,23 +1,12 @@
 .aboutCollapse {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 105px;
   width: 80%;
-  height: 600px;
   max-width: 1200px;
 }
 
-@media (max-width: 1350px) {
-  .aboutCollapse {
-    margin-top: 150px;
-    margin-bottom: 320px;
-    height: 100%;
-  }
-}
 @media (max-width: 767px) {
   .aboutCollapse {
-    margin-top: 300px;
-    margin-bottom: 320px;
-    height: 100%;
+    width: 100%;
   }
 }/*# sourceMappingURL=about.css.map */
