--- a/src/pages/Logements/logement.scss
+++ b/src/pages/Logements/logement.scss
@@ -1,21 +1,27 @@
 .logement {
-    padding: 0px 100px;
+    padding: 0px;
+    max-width: 1240px;
+    margin: auto;
 }
 
 .logement__collapse__container {
     display: flex;
+    gap: 76px;
 }
 
 .logement .renseignement__container {
     display: flex;
     color: #ff6060;
-    margin: 60px 0 30px;
+    margin: 20px 0 0 0;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 
     .renseignement__left {
         width: 50%;
         flex-direction: column;
+        padding-bottom: 20px;
+      
 
         .renseignement__info {
             display: flex;
@@ -29,7 +35,7 @@
 
             .renseignement__p {
                 font-size: 16px;
-                margin: 0;
+                margin: 5px 0 5px 0;
             }
         }
     }
@@ -53,6 +59,7 @@
 @media (max-width: 767px) {
     .logement {
         padding: 0px;
+        width: 95%;
     }
 
     .logement .renseignement__container .renseignement__left .renseignement__info .renseignement__title {
@@ -73,7 +80,8 @@
     }
     .logement__collapse__container{
         flex-direction: column;
-        gap: 20px;
+        gap: 0px;
+        margin-bottom: 25px;
     }
      .logement .renseignement__container .rating__host{
         display: flex;
@@ -81,4 +89,13 @@
         margin-bottom: 5px;
         flex-direction: row;
     }
+    .rating__host {
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: flex-end;
+       
+    }
+
 }
+
