--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,11 @@
 .container {
-    font-family: "Montserrat";
-    margin-left: 5px;
-    margin-right: 5px;
+  font-family: "Montserrat";
+  width: calc(100% - 100px);
+  margin: auto;
+}
+
+@media (max-width: 767px) {
+  .container {
+    width: 100%;
   }
+}/*# sourceMappingURL=style.css.map */
