--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -11,6 +11,7 @@
 @media (max-width:767px){
     .aboutCollapse{
        width: 95%;
+       margin-top: -25px;
+       margin-bottom: 20px;
     }
- }
- 
+  }
