--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
- gap: 50px;
+    gap: 50px;
  }
  
  .FooterText {
@@ -27,7 +27,7 @@
       width: 130px;
       height: 46px;
       text-align: center;
-      
+      margin-top: 0;
    }
 }
 
